# preauditor-ia-pro

./: .gitignore  .preauditor-ignore.example  LICENSE  MANIFEST.in  README.md  START_HERE.md  install.sh  preauditor.py  preauditor_ui.py  pyproject.toml
examples/: custom-rules.yml
sample-vulnerable/: Dockerfile  agent.js  app.py  infra.tf
sample-vulnerable/.github/workflows/: deploy.yml
tests/: test_preauditor.py
